--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -10,3 +10,18 @@
   width: 100%;
   padding: 50px;
 }
+
+nav {
+  display: flex;
+  gap: 15px;
+  font-size: 18px;
+
+  a {
+    color: #333;
+    text-decoration: none;
+  }
+
+  a.active {
+    color: #de9918 !important;
+  }
+}
