--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -2,6 +2,5 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px;
-  border: 3px solid;
+  padding: 20px 30px;
 }
