Add quote component

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -25,3 +25,17 @@ nav {
     color: #de9918 !important;
   }
 }
+
+.quote-container {
+  display: flex;
+  justify-content: center;
+  gap: 200px;
+  padding: 40px;
+}
+
+.calculator-container {
+  display: flex;
+  justify-content: center;
+  gap: 200px;
+  padding: 40px;
+}
