--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -39,3 +39,13 @@ nav {
   gap: 200px;
   padding: 40px;
 }
+
+@media (max-width: 900px) {
+  .calculator-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 30px;
+    text-align: center;
+  }
+}
