--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@300;500;700;800&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -8,7 +10,6 @@
 .app {
   height: 100vh;
   width: 100%;
-  padding: 50px;
 }
 
 nav {
@@ -17,20 +18,27 @@ nav {
   font-size: 18px;
 
   a {
-    color: #333;
+    color: black;
     text-decoration: none;
   }
 
   a.active {
-    color: #de9918 !important;
+    font-weight: bold;
   }
 }
 
 .quote-container {
   display: flex;
-  justify-content: center;
-  gap: 200px;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
   padding: 40px;
+
+  h2 {
+    color: rgb(115, 114, 114);
+    text-align: center;
+    font-family: 'Roboto Slab', serif;
+  }
 }
 
 .calculator-container {
