--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,8 +1,34 @@
+.container {
+  padding: 40px;
+}
+
 .header {
   margin-bottom: 20px;
+  font-size: 30px;
 }
 
 .content {
   font-size: 18px;
   line-height: 24px;
+  display: flex;
+  justify-content: space-between;
+  gap: 5%;
+
+  img {
+    width: 40%;
+    border-radius: 10px;
+  }
+}
+
+@media (max-width: 900px) {
+  .content {
+    flex-direction: column;
+    text-align: center;
+    gap: 30px;
+
+    img {
+      width: 80%;
+      margin: auto;
+    }
+  }
 }
